--- a/package.json
+++ b/package.json
@@ -1,79 +1,79 @@
 {
   "name": "vue-virtual-scroller",
-  "description": "Smooth scrolling for any amount of data",
   "version": "1.0.10",
+  "description": "Smooth scrolling for any amount of data",
   "author": {
     "name": "Guillaume Chau",
     "email": "guillaume.b.chau@gmail.com"
   },
-  "keywords": [
-    "vue",
-    "vuejs",
-    "plugin"
-  ],
-  "license": "MIT",
-  "main": "dist/vue-virtual-scroller.umd.js",
-  "module": "dist/vue-virtual-scroller.esm.js",
-  "unpkg": "dist/vue-virtual-scroller.min.js",
   "scripts": {
     "build": "npm run build:browser && npm run build:es && npm run build:umd",
+    "lint": "eslint --ext .js,.vue src",
     "build:browser": "rollup --config build/rollup.config.browser.js",
     "build:es": "rollup --config build/rollup.config.es.js",
     "build:umd": "rollup --config build/rollup.config.umd.js",
-    "prepublishOnly": "npm run lint && npm run build",
     "dev": "cross-env NODE_ENV=development rollup --config build/rollup.config.es.js --watch",
-    "lint": "eslint --ext .js,.vue src"
+    "prepublishOnly": "npm run lint && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Akryum/vue-virtual-scroller.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Akryum/vue-virtual-scroller/issues"
-  },
-  "homepage": "https://github.com/Akryum/vue-virtual-scroller#readme",
+  "main": "dist/vue-virtual-scroller.umd.js",
+  "module": "dist/vue-virtual-scroller.esm.js",
+  "unpkg": "dist/vue-virtual-scroller.min.js",
   "dependencies": {
-    "scrollparent": "^2.0.1",
     "vue-observe-visibility": "^0.4.4",
-    "vue-resize": "^0.4.5"
-  },
-  "peerDependencies": {
-    "vue": "^2.6.11"
+    "vue-resize": "file:../vue-resize"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-babel": "^5.1.0",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-replace": "^2.3.1",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "autoprefixer": "^9.7.5",
     "babel-eslint": "^10.1.0",
     "clean-css": "^4.1.8",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.3.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "7.0.0-alpha.8",
     "rollup": "^2.2.0",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-css-only": "^2.0.0",
     "rollup-plugin-css-porter": "^1.0.2",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-vue": "^5.1.6",
-    "vue": "^2.5.17",
-    "vue-template-compiler": "^2.6.11"
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-vue": "^6.0.0-beta.6",
+    "vue": "^3.0.0-beta.1",
+    "vue-cli-plugin-vue-next": "~0.1.3"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0-beta.1"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
   ],
+  "bugs": {
+    "url": "https://github.com/Akryum/vue-virtual-scroller/issues"
+  },
+  "homepage": "https://github.com/Akryum/vue-virtual-scroller#readme",
+  "keywords": [
+    "vue",
+    "vuejs",
+    "plugin"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akryum/vue-virtual-scroller.git"
+  },
   "resolutions": {
-    "vue": "2.5.22"
+    "vue": "^3.0.0-beta.1"
   }
 }
