--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "email": "guillaume.b.chau@gmail.com"
   },
   "scripts": {
-    "build": "npm run build:browser && npm run build:es && npm run build:umd",
+    "build": "yarn run build:browser && yarn run build:es && yarn run build:umd",
     "lint": "eslint --ext .js,.vue src",
     "build:browser": "rollup --config build/rollup.config.browser.js",
     "build:es": "rollup --config build/rollup.config.es.js",
     "build:umd": "rollup --config build/rollup.config.umd.js",
     "dev": "cross-env NODE_ENV=development rollup --config build/rollup.config.es.js --watch",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "yarn run lint && yarn run build"
   },
   "main": "dist/vue-virtual-scroller.umd.js",
   "module": "dist/vue-virtual-scroller.esm.js",
   "unpkg": "dist/vue-virtual-scroller.min.js",
   "dependencies": {
     "vue-observe-visibility": "^0.4.4",
-    "vue-resize": "file:../vue-resize"
+    "vue-resize": "LaurentChardin/vue-resize.git#vue3-update"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@rollup/plugin-babel": "^5.1.0",
-    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-replace": "^2.3.1",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
